# stonemason

./: .gitignore  Cargo.toml  README.md  flake.nix
lib/stonemason-common/: Cargo.toml
lib/stonemason-proc/: Cargo.toml
lib/stonemason-proc-private/: Cargo.toml
lib/stonemason-proc-private/src/: lib.rs
lib/stonemason-proc/src/: lib.rs  parse.rs  unparse.rs
lib/stonemason-proc/src/parse/: enum_.rs  modifier.rs  struct_.rs
lib/stonemason-proc/src/unparse/: enum_.rs  struct_.rs
proptest-regressions/: lib.txt
proptest-regressions/de/parse/: comment.txt  keyword.txt  literal.txt
proptest-regressions/de/parse/literal/: numeric.txt  textual.txt
proptest-regressions/de/parse/literal/textual/: character.txt  string.txt
src/: lib.rs  stn.pest  tests.rs
src/de/: parse.rs
src/de/parse/: attribute.rs  author.rs  comment.rs  expr.rs  generic.rs  identifier.rs  literal.rs  macro_.rs  meta.rs  path.rs  pattern.rs  stone.rs  type_.rs
src/de/parse/author/: comment.rs  space.rs
src/de/parse/expr/: function.rs
src/de/parse/literal/: numeric.rs  textual.rs
src/de/parse/literal/textual/: character.rs  string.rs
src/de/parse/literal/textual/character/: byte.rs
src/de/parse/path/: type_.rs
src/de/parse/stone/: module.rs
test/: Package.schema.stn  Package.stn  Test.stn
