[package]
name = "stonemason"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7"
unicode-ident = "^1"
lazy_static = "^1"
stonemason-common = { path = "lib/stonemason-common" }
stonemason-proc = { path = "lib/stonemason-proc" }
stonemason-proc-private = { path = "lib/stonemason-proc-private" }

[dev-dependencies]
proptest = "^1"
proptest-derive = "^0.3"

[features]
default = []
nightly = []
