[package]
name = "stonemason"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bin/*"]

[dependencies]
stonemason-common = { path = "lib/stonemason-common" }
stonemason-proc = { path = "lib/stonemason-proc" }
stonemason-proc-private = { path = "lib/stonemason-proc-private" }

# meta
tracing = { version = "^0.1", optional = true }

# parsing
nom = "^7.1"
unicode-ident = "^1"
lazy_static = "^1"

# compilation
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }

[dev-dependencies]
proptest = "^1"
proptest-derive = "^0.4"

[features]
default = [ "tracing-extra" ]
tracing = [ "dep:tracing" ]
tracing-extra = [ "tracing" ]
nightly = []
